--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.6.3",
     "mongodb": "4.1",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
